<resources>
    <string name="default_http_error">网络连接失败,请检查</string>
    <string name="default_http_time_out">网络连接超时</string>
    <string name="default_http_login_error">登录失败</string>
    <string name="loading_more">正在加载数据</string>
    <string name="login_timeout">登录已失效，请重新登录</string>
    <string name="re_login">重新登录</string>
    <string name="exit_dailog_tips" translatable="false">退出后填写的信息将无法保存，确定继续？</string>
    <string name="review_nopass" translatable="false">审核不通过,请重新申请</string>
    <string name="review_remit" translatable="false">你已申请过，请勿重复</string>
    <string name="review_submited" translatable="false">你的申请已提交到后台审核</string>
    <string name="review_apply" translatable="false">申请开通</string>
    <string name="app_name">摩富金服</string>
    <string name="register0">注册</string>
    <string name="register1">欢迎你加入摩富金服</string>
    <string name="register2">手机号</string>
    <string name="register3">验证码</string>
    <string name="register4">同意</string>
    <string name="register5">《摩富金服相关协议》</string>
    <string name="register6">下一步</string>
    <string name="register7">推荐人</string>
    <string name="register8">请输入推荐人手机号(可不填)</string>
    <string name="register9">密码</string>
    <string name="register10">请设置由6~15位数组成的密码</string>
    <string name="register11">如果没有推荐人，可致电我们客服获取推荐手机号！\n400-891-5100</string>
    <string name="login_1">忘记密码</string>
    <string name="finish">完成</string>
    <string name="home_page">首页</string>
    <string name="home_found">发现</string>
    <string name="home_receivable">交易查询</string>
    <string name="home_mine">我的</string>
    <string name="home_head1">快捷收款</string>
    <string name="home_head2">MPOS</string>
    <string name="home_head3">扫码收款</string>
    <string name="home_head4">跨境收款</string>
    <string name="home_shortservice1">信用卡还款</string>
    <string name="home_shortservice2">摩富理财</string>
    <string name="home_shortservice3">车好查</string>
    <string name="home_shortservice4">彩票</string>
    <string name="home_shortservice5">转账</string>
    <string name="home_shortservice6">自己借</string>
    <string name="home_lifeservice1">信用卡测评</string>
    <string name="home_lifeservice2">邀请好友</string>
    <string name="home_lifeservice3">申请信用卡</string>
    <string name="home_edit">摩富金服，懂支付，更懂你</string>
    <string name="home_tree">摩富树</string>
    <string name="home_backpack">商城</string>
    <string name="home_coco_loan">助贷</string>
    <string name="title_activity_login1111">Sign in</string>
    <string name="receivables_text1">今日收款总额/元</string>
    <string name="receivables_text2">共%d笔</string>
    <string name="receivables_text3">筛选</string>
    <string name="receivables_text4">默认MPOS</string>
    <string name="nodata">暂无数据</string>
    <string name="nomerchance">暂无商品</string>
    <string name="mine_text1">推荐人:</string>
    <string name="mine_text2">会员等级</string>
    <string name="mine_text3">卡管家</string>
    <string name="mine_text4">激励金</string>
    <string name="mine_text5">余额</string>
    <string name="mine_text6">公众号</string>
    <string name="mine_text7">积分</string>
    <string name="mine_text8">个人信息</string>
    <string name="mine_text9">帮助中心</string>
    <string name="mine_text10">更多</string>
    <string name="mine_text11">未认证</string>
    <string name="mine_text12">已认证</string>
    <string name="mine_text13">认证失败</string>
    <string name="mine_text14">审核中</string>
    <string name="mine_text15">背包</string>
    <string name="mine_text16">我的会员</string>
    <string name="not_validate">你还未实名，请前往实名</string>
    <string name="comingsoon">即将上线</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="realname">前往实名</string>
    <string name="reapplyrealname">重新申请实名</string>
    <string name="scanqr_title">商户入驻</string>
    <string name="scanning1">实名认证</string>
    <string name="scanning2">身份证</string>
    <string name="scanning3">银行卡</string>
    <string name="scanning4">手持身份证</string>
    <string name="scanning5">交易密码</string>
    <string name="scanning6">扫描身份证正面</string>
    <string name="scanning7">扫描身份证背面</string>
    <string name="scanning8">下一步</string>
    <string name="scanning_confirm">确认收款</string>
    <string name="check_pending">审核中</string>
    <string name="check_passed">待审核</string>
    <string name="check_failed">审核不通过</string>
    <string name="check_not_upload">未上传认证信息</string>
    <string name="check_pass">审核通过</string>
    <string name="check_never">未认证</string>
    <string name="mpos_pass">进件成功</string>
    <string name="mpos_apply">申请进件</string>
    <string name="mpos_never">未进件</string>
    <string name="type_normal">普通会员</string>
    <string name="type_golden">黄金会员</string>
    <string name="type_daimond">钻石会员</string>
    <string name="MPOS1">MPOS</string>
    <string name="MPOS2">限额说明</string>
    <string name="MPOS3">收款时间为每日凌晨0:35~21:55</string>
    <string name="MPOS4">请输入金额</string>
    <string name="MPOS5">输入的金额区间为10~50000元</string>
    <string name="MPOS6">MPOS收款由卡友支付提供</string>
    <string name="MPOS7">¥</string>
    <string name="MPOS8">$</string>
    <string name="MPOS9">选择行业</string>
    <string name="MPOS_date">适合全天</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="query_time_select_title">请选择日期</string>
    <string name="begin_at">开始于\n</string>
    <string name="end_at">结束于\n</string>
    <string name="time_start_larger_end_not_allowed">开始时间不能大于结束时间</string>
    <string name="time_left">还有%ss</string>
    <string name="ok" translatable="false">确 认</string>
    <string name="more_text1">修改登录密码</string>
    <string name="more_text2">修改交易密码</string>
    <string name="more_text3">关于我们</string>
    <string name="more_text4">用户协议</string>
    <string name="more_text5">欢迎评分</string>
    <string name="more_text6">退出登录</string>
    <string name="more_text7">语音播报</string>
    <string name="modfyCode1">修改登录密码</string>
    <string name="modfyCode2">手机号</string>
    <string name="modfyCode3">请输入您的注册手机号</string>
    <string name="modfyCode4">验证码</string>
    <string name="modfyCode5">请输入验证码</string>
    <string name="modfyCode6">新密码</string>
    <string name="modfyCode7">请输入新密码</string>
    <string name="modfyCode8">确认密码</string>
    <string name="modfyCode9">请再次输入密码</string>
    <string name="update_version_name">版本号</string>
    <string name="update_title">你有新版本需要更新</string>
    <string name="install_title">免下载安装</string>
    <string name="install_immediate">立即安装</string>
    <string name="update_immediate">立即更新</string>
    <string name="update_cancel">取消</string>
    <string name="update_ignore">忽略此版本</string>
    <string name="download_progress">下载进度</string>
    <string name="invitation_text1">摩富金服APP，一个多元化的金融服务平台，MPOS收款、无卡收款、扫码收款、投资理财、贷款融资、信用卡申请与代还等等，一应俱全！</string>
    <string name="invitation_text2">邀请好友</string>
    <string name="invitation_text3">邀请好友可获得佣金：</string>
    <string name="invitation_text4">1.邀请好友注册并实名认证</string>
    <string name="invitation_text5">2.好友使用摩富金服收款</string>
    <string name="invitation_text6">邀请记录</string>
    <string name="invitation_text7">分享</string>
    <string name="invitation_text8" translatable="false">
        限时免费领取口罩
        亲，口罩已经打包好了！
        您距离领取口罩还差一步，点击领取吧</string>
    <string name="login_wechat">正在启动微信</string>
    <string name="wechat_not_installed">您还未安装微信，请前往商店安装</string>
    <string name="wechat_share_title">摩富金服，专属您自己的微金融！</string>
    <string name="industry_text1">选择行业</string>
    <string name="industry_text2">实际到账/元：</string>
    <string name="industry_text3">收款金额/元：</string>
    <string name="industry_text4">手续费/元：</string>
    <string name="industry_text5">费率：</string>
    <string name="industry_text6">单笔/元：</string>
    <string name="industry_text7">标准商户</string>
    <string name="industry_text8">商旅服务</string>
    <string name="industry_text9">餐饮服务</string>
    <string name="industry_text10">日用百货</string>
    <string name="industry_text11">高端珠宝</string>
    <string name="industry_text12">超市家电</string>
    <string name="industry_text13">便民服务</string>
    <string name="industry_text14">汽车房产</string>
    <string name="order_text1">收入/元</string>
    <string name="order_text2">共$s笔</string>
    <string name="order_text3">筛选</string>
    <string name="order_text4">交易成功</string>
    <string name="order_text5">交易失败</string>
    <string name="order_text6">处理中</string>
    <string name="order_text7">订单未付款</string>
    <string name="order_text8">默认MPOS</string>
    <string name="order_mpos">MPOS收款</string>
    <string name="order_scanpay">扫码收款</string>
    <string name="order_short_rec">快捷收款</string>
    <string name="order_over_rec">跨境收款</string>
    <string name="order_wechat_rex">微信收款</string>
    <string name="order_alipay_rec">支付宝收款</string>
    <string name="order_defualt">设为默认</string>
    <string name="order_check">查看</string>
    <string name="order_icon_m">M</string>
    <string name="order_icon_short">快</string>
    <string name="order_icon_over">境</string>
    <string name="order_icon_wechat">微</string>
    <string name="order_icon_alipay">支</string>
    <string name="order_default_mpos">MPOS收款</string>
    <string name="order_default_scan">扫码收款</string>
    <string name="order_default_shortpay">快捷收款</string>
    <string name="order_default_repay">跨境收款</string>
    <string name="order_detail_title">交易查询</string>
    <string name="order_detail_ok">交易成功</string>
    <string name="order_detail_fail">交易失败</string>
    <string name="order_detail_handling">处理中</string>
    <string name="order_detail_1">订单号</string>
    <string name="order_detail_2">刷卡金额</string>
    <string name="order_detail_3">手续费</string>
    <string name="order_detail_4">到账金额</string>
    <string name="order_detail_5">交易时间</string>
    <string name="order_detail_6">到账时间</string>
    <string name="order_detail_7">出账账户</string>
    <string name="order_detail_8">入账账户</string>
    <string name="order_detail_9">交易说明</string>
    <string name="order_detail_10">交易类型</string>
    <string name="order_detail_11">结算类型</string>
    <string name="order_detail_12">交易卡号</string>
    <string name="order_detail_13">结算卡号</string>
    <string name="order_detail_14">清算费</string>
    <string name="order_detail_15">到账银行</string>
    <string name="order_detail_16">到账卡号</string>
    <string name="over_status_0">未支付</string>
    <string name="over_status_1">支付失败</string>
    <string name="over_status_2">支付成功等待回款</string>
    <string name="over_status_3">支付成功已回款</string>
    <string name="scan_qr_head_1">基本信息</string>
    <string name="scan_qr_head_2">结算账户</string>
    <string name="scan_qr_head_3">经营信息</string>
    <string name="scan_qr_head_4">上传图片</string>
    <string name="merchan_scan_title">商家扫码</string>
    <string name="merchan_scan_1">扫码收款目前仅支持支付宝扫码、微信扫码</string>
    <string name="merchan_scan_2">输入金额为1~10000元</string>
    <string name="merchan_scan_3">请选择收款方式</string>
    <string name="merchan_scan_4">支付宝扫码（单笔限额50000元/笔）</string>
    <string name="merchan_scan_5">结算方式T+0  费率0.54%</string>
    <string name="merchan_scan_6">微信扫码（单笔限额50000元/笔）</string>
    <string name="merchan_scan_7">结算方式T+1  费率0.38%</string>
    <string name="merchan_scan_8">微信收款只能通过扫码，不能直接识别二维码</string>
    <string name="merchan_scan_9">确认收款</string>
    <string name="change_card_1">默认结算卡,为平台实名认证卡不可解除绑定</string>
    <string name="change_card_2">MPOS收款</string>
    <string name="change_card_3">自行更换MPOS结算卡，请确保您想要更换的结算卡已在本平台绑定。</string>
    <string name="change_card_btn">修改结算卡</string>
    <string name="change_card_4">扫码收款：</string>
    <string name="change_card_5">扫码结算卡一经扫码开通则不可变更,请慎重选择。</string>
    <string name="change_card_6">快捷收款：</string>
    <string name="change_card_7">目前快捷通道都支持指定结算卡,所以无需变更,绑定多张自行选择即可。</string>
    <string name="change_card_8">跨境收款：</string>
    <string name="change_card_9">目前境外收款的提现可以指定结算卡,所以无需变更,绑定多张自行选择即可。</string>
    <string name="change_card_10">摩富理财：</string>
    <string name="change_card_11">目前理财到期自动赎回,在余额中发起提现可指定结算卡,所以无需变更,绑定多张自行选择即可。</string>
    <string name="change_card_12">以上说明如有疑问可致电右上角客服热线</string>
</resources>